/*
 * Copyright 2020 tsurugi project.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

#ifndef TABLE_STATISTIC_H_
#define TABLE_STATISTIC_H_

#include <string>

#include "manager/metadata/metadata.h"

namespace manager::metadata {

class TableStatistic {
   public:
    ObjectIdType id;
    std::string name;
    std::string namespace_name;
    float reltuples;
};

}  // namespace manager::metadata

#endif  // TABLE_STATISTIC_H_
