@startuml ClassDiagram_overview
left to right direction
allowmixing

package "manager/metadata-manager" {

  package manager::metadata as manager_metadata{
    class "Metadata" as Metadata {
      {method}+init()
    }

    class Statistics {
      {method}+init()
      {method}
      {method}+add_one_column_statistic
      {method}+add_table_statistic
      {method}+add_table_statistic
      {method}+get_one_column_statistic
      {method}+get_all_column_statistics
      {method}+get_table_statistic
      {method}+get_table_statistic
      {method}+remove_one_column_statistic
      {method}+remove_all_column_statistics
    }
    
    class Tables {
      
    }
    
  }
    
    package manager::metadata::entity as entity{
      class TableStatistic {
        {field}+int64_t id
        {field}+std::string name
        {field}+std::string namespace_name
        {field}+float reltuples
      }
      
      class ColumnStatistic {
        {field}+int64_t table_id
        {field}+int64_t ordinal_position
        {field}+boost::property_tree::ptree column_statistic
      }
    }

  Statistics --|> Metadata
  Tables --|> Metadata
  Statistics ..> TableStatistic
  Statistics ..> ColumnStatistic
  
  note bottom of manager_metadata
  サービス層
  end note
  
  note left of entity
  列統計・表統計エンティティ
  列統計・表統計の受け渡しに利用
  end note
}

component "metadata-managerの\nAPIを利用する\nTsurugiのコンポーネント" as other_components 
other_components ..> Statistics
@enduml

@startuml ClassDiagram_overview_connection
title サービス層のオブジェクトとコネクションのオブジェクト図
left to right direction
allowmixing

package "manager/metadata-manager" {

  package manager::metadata as manager_metadata{
    object Tables
    object Statistics
  }
  
  package manager::metadata::db as manager_db{
    object "PGconn" as pg1
    object "PGconn" as pg2
  }

  pg1 : con = コネクション1のポインタ
  pg2 : con = コネクション2のポインタ
  
  Tables "1" --> "1" pg2
  Statistics "1" --> "1" pg1
    
  note bottom of manager_metadata
  サービス層
  end note
}

component "メタデータ格納先\n(PostgreSQL)" as metadata_store
pg1 ..> metadata_store : コネクション1
pg2 ..> metadata_store : コネクション2

@enduml

@startuml ClassDiagram_overview_dao
left to right direction
allowmixing

package "manager/metadata-manager" {
  package manager::metadata::db as manager_db{
  
    class "DBSessionManager" as DBSM {
    }

    package dao{

      class "StatisticsDAO" as StatisticsDAO{
      }
  
      class "TablesDAO" as TablesDAO{
      }
  

    }
  }

  package manager::metadata as manager_metadata{

    class "Metadata" as Metadata {
      {field}#DBSessionManager db_session_manager
    }
    
    class Statistics {
      {field}-StatisticsDAO sdao
      {field}-TablesDAO tdao
    }
    
    class Tables{
      {field}-TablesDAO tdao
    }

  }
  
  note bottom of manager_metadata
  サービス層
  end note
  
  note bottom of manager_db
  DBアクセス層
  end note

  Metadata "1" *--> "1" DBSM
  Tables "1" *-->"1" DBSM
  Statistics "1" *--> "1" DBSM
  Statistics -|> Metadata
  Tables -|> Metadata
  Statistics -> StatisticsDAO
  Statistics -> TablesDAO
  Tables -> TablesDAO
}

component "メタデータ\n格納先" as metadata_store

dao ..> metadata_store : 前処理済みプリペアード\nステートメント発行
DBSM ..> metadata_store : コネクション管理・\nトランザクション管理・\nクエリの前処理実行

@enduml

@startuml ClassDiagram_detail_dbsm
left to right direction
allowmixing

package "manager/metadata-manager" {
  package manager::metadata as manager_metadata{

    class "Metadata" as Metadata {
      {field}#DBSessionManager db_session_manager
    }
    
    class Statistics {
    }
    
    class Tables{
    }

  }
  
  package manager::metadata::db{
  
    class "DBSessionManager" as DBSM {
      {field}-{static}PGconn *connection

      {method}+{static}ErrorCode get_dao(TableName table_name, GenericDAO *&gdao)
      {method}
      {method}-{static}bool is_open()
      {method}+{static}ErrorCode connect()
      {method}+{static}ErrorCode close()
      {method}
      {method}+{static}ErrorCode start_transaction()
      {method}+{static}ErrorCode commit()
      {method}+{static}ErrorCode rollback()
      {method}+{static}ErrorCode set_always_secure_search_path()
    }
  
    class Config {
      {method}+{static}std::string get_connection_string()
    }
  }
  
  note bottom of manager_metadata
  サービス層
  end note

  Metadata "1" *--> "1" DBSM
  Tables "1" *--> "1" DBSM
  Statistics "1" *--> "1" DBSM
  Statistics -|> Metadata
  Tables -|> Metadata
  
  DBSM .> Config

}

component "OSの環境変数" as os
Config ..> os

@enduml

@startuml ClassDiagram_detail_dao
left to right direction

package "manager/metadata-manager" {
  
  package manager::metadata::db::dao{
  
    abstract class GenericDAO
    {
      {field}#TableName table_name
	    {field}#PGconn *connection
      {method}#bool prepare(const char* &name, const char* &statement)
	    {method}#bool exec_prepared(const char* &name, std::vector<char const *> &paramValues, PGresult *&res)
	    {method}+GenericDAO(PGconn *connection, TableName table_name)
	    {method}+virtual ~GenericDAO()
      {method}-bool prepare()
    }

    class "StatisticsDAO" as StatisticsDAO{
      {method}+upsert_one_column_statistic_by_table_id_column_ordinal_position( column_statistic, table_id, ordinal_position)
      {method}+select_one_column_statistic_by_table_id_column_ordinal_position( column_statistic, table_id, ordinal_position)
      {method}+select_all_column_statistic_by_table_id( column_statistics, table_id)
      {method}+delete_all_column_statistic_by_table_id( table_id)
      {method}+delete_one_column_statistic_by_table_id_column_ordinal_position( table_id, ordinal_position)
    }
  
    class "TablesDAO" as TablesDAO{
      {method}+update_reltuples_by_table_name(reltuples, table_name)
      {method}+update_reltuples_by_table_id(reltuples, table_id)
      {method}+select_table_statistic_by_table_name( tables, table_name)
      {method}+select_table_statistic_by_table_id( tables, table_id)
    }
  
  }

  StatisticsDAO -|> GenericDAO
  TablesDAO -|> GenericDAO
}

@enduml

@startuml ClassDiagram_detail_dialect
left to right direction

package "manager/metadata-manager" {

  package manager::metadata::db::dao{

    abstract class GenericDAO
    {
    }

    package dialect{
      class DialectStrategy
      {
        -{field}{static}{method}Dialect* instance;
        +{method}{static}{method}Dialect* getInstance();
      }
  
      abstract class Dialect {

	      {method}virtual ~Dialect(){};
        {method}
        {method}// StatisticsDAO
	      {method}virtual const char *statistics_dao_upsert_one_column_statistic_by_table_id_column_ordinal_position() = 0;
	      {method}virtual const char *statistics_dao_select_one_column_statistic_by_table_id_column_ordinal_position() = 0;
	      {method}virtual const char *statistics_dao_select_all_column_statistic_by_table_id() = 0;
        {method}virtual const char *statistics_dao_delete_all_column_statistic_by_table_id() = 0;
        {method}virtual const char *statistics_dao_delete_one_column_statistic_by_table_id_column_ordinal_position() = 0;
        {method}
        {method}// TablesDAO
        {method}virtual const char* tables_dao_update_reltuples_by_table_id() = 0;
        {method}virtual const char* tables_dao_update_reltuples_by_table_name() = 0;
        {method}virtual const char* tables_dao_select_table_statistic_by_table_id() = 0;
        {method}virtual const char* tables_dao_select_table_statistic_by_table_name() = 0;
      }
  
      class PostgreSQLDialect
      {
      }
    }
  }
  
  GenericDAO ..> DialectStrategy
  
  PostgreSQLDialect -|> Dialect
  DialectStrategy -> PostgreSQLDialect
  
}

@enduml

@startuml ClassDiagram_detail_dao_enum
left to right direction

package "manager/metadata-manager" {

  package manager::metadata::db::dao{

    enum TableName
    {
	    STATISTICS
      TABLES
    }
  
    enum StatementName{
      STATISTICS_DAO_UPSERT_ONE_COLUMN_STATISTIC_BY_TABLE_ID_COLUMN_ORDINAL_POSITION
      STATISTICS_DAO_SELECT_ONE_COLUMN_STATISTIC_BY_TABLE_ID_COLUMN_ORDINAL_POSITION
      STATISTICS_DAO_SELECT_ALL_COLUMN_STATISTIC_BY_TABLE_ID
      STATISTICS_DAO_DELETE_ALL_COLUMN_STATISTIC_BY_TABLE_ID
      STATISTICS_DAO_DELETE_ONE_COLUMN_STATISTIC_BY_TABLE_ID_COLUMN_ORDINAL_POSITION
      TABLES_DAO_UPDATE_RELTUPLES_BY_TABLE_NAME
      TABLES_DAO_UPDATE_RELTUPLES_BY_TABLE_ID
      TABLES_DAO_SELECT_TABLE_STATISTIC_BY_TABLE_NAME
      TABLES_DAO_SELECT_TABLE_STATISTIC_BY_TABLE_ID
    }
  
    abstract class GenericDAO
    {
    }
  }
  
  GenericDAO ..> TableName
  GenericDAO ..> StatementName
  
}

@enduml
